
[workspace]
members = [
  "crates/markdown-oxide", "crates/parsing",
] # other `members` are specified in dependencies
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
config = "0.14.0"
do-notation = "0.1.3"
fuzzydate = "0.2.2"
indexmap = "2.2.6"
itertools = "0.13.0"
nanoid = "0.4.0"
nucleo-matcher = "0.3.1"
once_cell = "1.18.0"
pathdiff = "0.2.1"
rayon = "1.7.0"
regex = "1.10.2"
ropey = "1.6.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tokio = { version = "1.34.0", features = ["full"] }
tower-lsp = { git = "https://github.com/Feel-ix-343/tower-lsp" }
walkdir = "2.4.0"
derive_deref = "1.1.1"


# local crates
completions.path = "crates/completions"
moxide_config.path = "crates/moxide_config"
vault.path = "crates/vault"
ui.path = "crates/ui"
