
[workspace]
resolver = "2"

members = ["crates/md_parser", "crates/util", "crates/vault"]

[workspace.dependencies]

tiktoken = "*"

ropey = "*"
walkdir = "*"
itertools = "*"
rayon = "*"
anyhow = "*"
derive_deref = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
util = { path = "crates/util" }
