[package]
name = "markdown-oxide"
version = "0.25.9"
edition = "2021"
repository = "https://github.com/Feel-ix-343/markdown-oxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
clap = { version = "4.5", features = ["derive"] }
config = "0.14.0"
fuzzydate = "0.2.3"
indexmap = "2.2.6"
itertools = "0.13.0"
nanoid = "0.4.0"
nucleo-matcher = "0.3.1"
once_cell = "1.18.0"
pathdiff = "0.2.1"
rayon = "1.7.0"
regex = "1.10.2"
ropey = "1.6.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tokio = { version = "1.34.0", features = ["full"] }
tower-lsp = { git = "https://github.com/Feel-ix-343/tower-lsp" }
walkdir = "2.4.0"
do-notation = "0.1.3"
urlencoding = "2.1.3"
path-clean = "1.0.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"

[profile.release]
codegen-units = 1
lto = true
