[package]
name = "collection"
version = "0.1.0"
edition = "2021"

[dependencies]
parsing.workspace = true
anyhow.workspace = true
itertools.workspace = true
rayon.workspace = true
embeddings.workspace = true
derive_deref.workspace = true
model.workspace = true
tokio.workspace = true
bincode = "1.3.3"
serde.workspace = true
serde_json = "1.0.127"
