[package]
name = "completions"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon.workspace = true
do-notation.workspace = true
tower-lsp.workspace = true
vault.workspace = true
moxide_config.workspace = true
regex.workspace = true
nucleo-matcher.workspace = true
ui.workspace = true
serde_json.workspace = true
nanoid.workspace = true
itertools.workspace = true
chrono.workspace = true
anyhow.workspace = true
