[package]
name = "md_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter-md = { path = "./tree-sitter-markdown", features = ["parser"] }
tree-sitter = "*"
ropey.workspace = true
walkdir.workspace = true
itertools.workspace = true
rayon.workspace = true
anyhow.workspace = true
derive_deref.workspace = true
tracing.workspace = true
