[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
bincode = "1.3.3"
itertools = "0.13.0"
redb = "2.1.3"
serde = { version = "1.0.210", features = ["serde_derive"] }
md_parser = { path = "../md_parser" }
rayon.workspace = true
async-openai = "0.24.0"
tiktoken-rs = "*"
tokio = { version = "*", features = ["full"] }
futures = "0.3.30"
tempfile = "*"

num_cpus = "1.13.1"

ropey.workspace = true
walkdir.workspace = true
derive_deref.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
util.workspace = true
